<resources>
    <string name="app_name">nEdge</string>

    <string name="google_client_id_acceptance">abcd</string>
    <string name="google_client_secret_acceptance">abcd</string>
    <string name="google_client_redirect_uri_acceptance">abcd</string>

    <string name="google_client_id_development">abcd</string>
    <string name="google_client_secret_development">abcd</string>
    <string name="google_client_redirect_uri_development">abcd</string>

    <string name="google_client_id_production">abcd</string>
    <string name="google_client_secret_production">abcd</string>
    <string name="google_client_redirect_uri_production">abcd</string>

    <string name="google_client_id_staging">abcd</string> <!-- 586601826954-bf3rmcj9dbhii39tpu9negagt85ebfjg.apps.googleusercontent.com -->
    <string name="google_client_secret_staging">abcd</string> <!-- q25W9B3-pqWebWZ1ZY6Za6op -->
    <string name="google_client_redirect_uri_staging">abcd</string> <!-- https://udeoglobe-staging.firebaseapp.com/__/auth/handler -->

    <string name="google_maps_key">abcd</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="call_not_supported">Call Not Supported</string>
    <string name="pick_image_intent_text">Pick Image</string>
    <string name="something_wrong__with_direction_api">Some Thing went wrong with Direction Api</string>
    <string name="facebook_app_id">123456</string>
    <string name="server_setting">Server Settings</string>
    <string name="minimun_version">Minimun Version</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="noInternet">Please Connect to working internet</string>
    <string name="alert">Alert</string>
    <string name="retry">Retry</string>
    <string name="areYouSure">Are You Sure?</string>
    <string name="error">Error</string>
    <string name="session_expire_title">Session Expired</string>
    <string name="session_expire_message">Your session has been expired please login again</string>
    <string name="build_version">Build Version</string>
    <string name="url">Url</string>
    <string name="crash_app">Crash App</string>
    <string name="str_screen_under_development">Under Development Screen</string>
    <string name="msg_subscribed">Subscribe To FCM Topic Successfully</string>
    <string name="msg_subscribe_failed">Failed to Subscribe to FCM Topic</string>
    <string name="str_select_image">Select Image</string>
    <string name="str_select_video">Select Video</string>
    <string name="str_gallery">Gallery</string>
    <string name="str_camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="go_to_setting">Go To Setting</string>
    <string name="camera_permission_msg">Please enable camera permission from Settings.</string>
    <string name="gallery_permission_msg">Please enable gallery permission from Settings.</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="rate_per_making_answer">Rate per making answer</string>
    <string name="rate_per_lecture">Rate per lecture</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="done">Done</string>

    <array name="days">
        <item>Availability Days:?</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>

    </array>
    <string name="login">Login</string>
    <string name="phone_email">Phone/Email</string>
    <string name="firstname">firstName</string>
    <string name="lastname">lastName</string>
    <string name="email">Email</string>
    <string name="signup">Sign Up</string>
    <string name="require_field">require_field</string>
    <string name="password">Password</string>
    <string name="registration">Registration?</string>
    <string name="name">Name</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="phone">Phone No.</string>
    <string name="register">Register</string>
    <string name="iWantToLearn">I want to learn at</string>
    <string name="iAmExpertAt">I am expert at</string>
    <string name="levelValidation">Please select Education type</string>
    <string name="userTypeValidation">Please select User type</string>
    <string name="someThingWentWrong">Something went wrong</string>
    <string name="passwordLengthValidation">Password length should be greater than 6</string>
    <string name="subject">Subject ?</string>
    <string name="subjectValidation">Please select Subject</string>
    <string name="daysValidation">Please select at least one day</string>
    <string name="dontHaveAccount">Don\'t have account?</string>
    <string name="back">Back</string>
    <string name="iAmExpert">I am an expert</string>
    <string name="school_college">School/college</string>
    <string name="university">University</string>
    <string name="css_professional">CSS/professional</string>
    <string name="please_select_education_type">Please select education type</string>

    <string-array name="userType">
        <item>"Register as ?"</item>
        <item>Student</item>
        <item>Expert</item>
    </string-array>

    <string-array name="levelOptios">
        <item>School/College</item>
        <item>University</item>
        <item>CSS/Professional</item>
    </string-array>


</resources>