<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.RegistrationActivtiy.RegistrationActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewRegistration"
        android:gravity="center"
        android:layout_marginVertical="@dimen/_5dp"
        android:text="@string/registration"
        android:textSize="@dimen/_25sp" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextName"
        android:layout_marginVertical="@dimen/_5dp"
        android:hint="@string/name" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/editTextEmail"
        android:layout_marginVertical="@dimen/_5dp"
        android:hint="@string/email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextPassword"
        android:inputType="textPassword"
        android:layout_marginVertical="@dimen/_5dp"
        android:hint="@string/password" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextPhoneNumber"
        android:inputType="phone"
        android:layout_marginVertical="@dimen/_5dp"
        android:hint="@string/phone" />

    <Spinner
        android:id="@+id/spinnerUserType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginVertical="@dimen/_5dp"
        android:entries="@array/userType" />

    <Spinner
        android:id="@+id/spinnerLevelOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/buttonRegister"
        android:layout_marginVertical="@dimen/_15dp"
        android:text="@string/register"
        android:textAllCaps="false" />


</LinearLayout>
</ScrollView>