<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FDFDFD"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_16dp">

        <TextView
            android:id="@+id/textSelect"
            android:layout_width="@dimen/_145dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_select_image"
            android:textColor="#1C1B1B"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/galleryLayout"
            android:layout_width="@dimen/_145dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/galleryIcon"
                android:layout_width="@dimen/_40dp"
                android:layout_height="@dimen/_40dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_insert_photo" />

            <TextView
                android:id="@+id/galleryTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_6dp"
                android:layout_marginLeft="@dimen/_6dp"
                android:gravity="center_vertical"
                android:text="@string/str_gallery"
                android:textColor="#1C1B1B"
                android:textSize="@dimen/_15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cameraLayout"
            android:layout_width="@dimen/_150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/cameraIcon"
                android:layout_width="@dimen/_40dp"
                android:layout_height="@dimen/_40dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_photo_camera" />

            <TextView
                android:id="@+id/cameraTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_6dp"
                android:layout_marginLeft="@dimen/_6dp"
                android:gravity="center_vertical"
                android:text="@string/str_camera"
                android:textColor="#1C1B1B"
                android:textSize="@dimen/_15sp" />
        </LinearLayout>
    </LinearLayout>
</layout>