<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.SignUpActivity.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/textView_nEdge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:gravity="center"
            android:src="@mipmap/undraw_teaching" />


        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginVertical="@dimen/_5dp"
            android:background="@drawable/border_grey"
            android:hint="@string/name"
            android:padding="@dimen/_5dp" />


        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginVertical="@dimen/_5dp"
            android:background="@drawable/border_grey"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_5dp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginVertical="@dimen/_5dp"
            android:background="@drawable/border_grey"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/_5dp" />

        <LinearLayout
            android:id="@+id/numberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_grey"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:layout_width="@dimen/_50dp"
                android:layout_height="@dimen/_40dp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_4dp"
                android:src="@drawable/flag_pakistan" />

            <TextView
                android:id="@+id/textCountryCode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_5dp"
                android:gravity="center"
                android:text="+92"
                android:textColor="@color/color_black" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50dp"
                android:layout_weight="0.7"
                android:background="@android:color/transparent"
                android:hint="@string/phone"
                android:inputType="number"
                android:maxLength="12"
                android:paddingStart="@dimen/_5dp"
                android:paddingLeft="@dimen/_50dp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_15dp"
            android:text="@string/register"
            android:textAllCaps="false" />


    </LinearLayout>
</ScrollView>